# localdeck

./: .gitignore  Cargo.toml  README.md  setup_scanner_access.sh
crates/cli/: Cargo.toml
crates/cli/src/: card_player.rs  cli.rs  config.rs  main.rs  music_player.rs  qr_scanner.rs
crates/http/: Cargo.toml
crates/http/html/: stream.html
crates/http/src/: error.rs  lib.rs  server.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  db.rs  error.rs  file_hash.rs  fs.rs  lib.rs  operations.rs  schema.rs  track.rs  track_id.rs  usb.rs
html/: index.html  no_track.html  offer_yt.html  scan_qr.html  scan_qr_debug.html
python_scripts/: diff_new.py  forget_missing.py  gen_card.py  generate_batch.py  generate_card.py  layout.py  recode.py  verify_present.py
service-configs/: localdeck-test.service
src/: card_player.rs  card_trackid.rs  config.rs  location.rs  main.rs  music_player.rs  public_endpoint.rs
src/cli/: mod.rs
src/domain/: hash.rs  mod.rs  track.rs
src/http/: error.rs  mod.rs  server.rs
src/storage/: db.rs  error.rs  fs.rs  mod.rs  observe.rs  operations.rs  schema.rs  usb.rs
