[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tmp_crate",
    # "crates/core",
    # "crates/storage",
    # "crates/player",
    # "crates/cli",
    # "crates/http-server",
    # "crates/qr-app",
]

[workspace.dependencies]
# serde = { version = "1.0", features = ["derive"] }
# localdeck-core = { path = "crates/core" }
# localdeck-storage = { path = "crates/storage" }
# localdeck-player = { path = "crates/player" }
