[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/http",
    "crates/storage",
    # "crates/core",
    # "crates/storage",
    # "crates/player",
    # "crates/cli",
    # "crates/http-server",
    # "crates/qr-app",
]

[workspace.dependencies]
localdeck-storage = { path = "crates/storage" }
localdeck-http = { path = "crates/http" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.7"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
mime_guess = "2.0"
tempfile = "3"
