[package]
name = "localdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
localdeck-storage = { workspace = true }
localdeck-http = { workspace = true }

clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serialport = "4.9"
crossbeam = "0.8"
rodio = "0.22"
url = "2.5"


[dev-dependencies]
tempfile = "3"
