[package]
name = "localdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
localdeck-storage = { workspace = true }
localdeck-http = { workspace = true }

clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serialport = "4.9"
crossbeam = "0.8"
# rodio = "0.22"
# Use specific version of rodio to make sure the cpal / alsa fix from https://github.com/RustAudio/cpal/issues/1134 is applied
# rodio = { git = "https://github.com/RustAudio/rodio", rev = "174ce9bd" }
rodio = { git = "https://github.com/RustAudio/rodio" }
url = "2.5"


[dev-dependencies]
tempfile = "3"
