[package]
name = "localdeck-storage"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }

blake3 = "1.8"
rusqlite = { version = "0.38", features = ["bundled"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }


[dev-dependencies]
tempfile = "3"
